<resources>
    <string name="web_client_id">958995698022-jj0l89ijnm3d3mt9s0oc5st8m2c5aq1l.apps.googleusercontent.com</string>
    <string name="app_name">K-Tourism</string>
    <string name="welcome_screen_title">Welcome to 👋</string>
    <string name="welcome_screen_subtitle">The best hotel booking in this century to accompany your vacation</string>
    <string name="username_input_field_placeholder">Username</string>
    <string name="cd_profile_icon">profile icon</string>
    <string name="email_input_field_placeholder">Email</string>
    <string name="cd_email_icon">email icon</string>
    <string name="cd_password_icon">password icon</string>
    <string name="passwrord_input_field_placeholder">Password</string>
    <string name="cd_google_icon">google icon</string>
    <string name="login_google_button_text">Continue with Google</string>
    <string name="cd_facebook_icon">facebook icon</string>
    <string name="login_facebook_button_text">Continue with Facebook</string>
    <string name="search_bar_placeholder">Search</string>
    <string name="cd_filter_icon">filters</string>
    <string name="destination_home">Home</string>
    <string name="destination_search">Search</string>
    <string name="destination_booking">Booking</string>
    <string name="destination_profile">Profile</string>
    <string name="carousel_1_heading"><![CDATA[Travel safely, comfortably, & easily]]></string>
    <string name="carousel_2_heading">Find the best hotels for your vacation</string>
    <string name="carousel_3_heading">Let’s discover the world with us</string>
    <string name="carousel_1_body_text">Your safe, comfy travel starts here! Book with ease and confidence. Let\'s go!</string>
    <string name="carousel_2_body_text">Discover dream hotels for your trip. Best deals, no hassle. Let\'s find your stay!</string>
    <string name="carousel_3_body_text">Ready to explore? Join us on an adventure worldwide. Let\'s begin now!</string>
    <string name="carousel_button_next">Next</string>
    <string name="carousel_button_skip">Skip</string>
    <string name="cd_navigate_up">navigate up</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="or">or</string>
    <string name="authentication_heading">Let\'s you in</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="sign_in_screen_heading">Login to your \nAccount</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_up_screen_heading">Create your\nAccount</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="cd_avatar_change_a_photo_button">change a photo</string>
    <string name="fill_your_profile_screen_heading">Fill Your Profile</string>
    <string name="edit_profile_screen_update_button">Continue</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="authentication_something_went_wrong">Something went wrong. Couldn\'t sign in.</string>
    <string name="sign_up_account_exist_dialog_primary_button">Go to sign in</string>
    <string name="sign_up_account_exist_dialog_heading">Account exists</string>
    <string name="sign_up_account_exist_dialog_body">The email address is already in use by another account. Try to sign in instead.</string>
    <string name="sign_up_email_with_google_dialog_heading">Sign In with Google</string>
    <string name="sign_up_email_with_google_dialog_body">The email is associated with a Google account. Press \'Continue with Google\' button to sign in.</string>
    <string name="sign_in_screen_user_not_found">User not found</string>
    <string name="sign_in_screen_wrong_password">Wrong password</string>
    <string name="sign_in_screen_sign_in_error">Couldn\'t sign in. Something went wrong</string>
    <string name="sign_in_screen_invalid_email">Invalid email</string>
    <string name="sign_in_screen_wrong_password_dialog_heading">Wrong password</string>
    <string name="fill_profile_screen_error">Error happened. Try again.</string>
    <string name="profile_screen_title">Profile</string>
    <string name="setting_category_dark_theme">Dark Theme</string>
    <string name="setting_category_edit_profile">Edit Profile</string>
    <string name="setting_category_payment">Payment</string>
    <string name="setting_category_notifications">Notifications</string>
    <string name="setting_category_security">Security</string>
    <string name="setting_category_help">Help</string>
    <string name="setting_category_logout">Logout</string>
    <string name="logout_dialog_heading">Logout</string>
    <string name="logout_dialog_body">Are you sure you want to log out?</string>
    <string name="logout_dialog_positive_button">Yes, logout</string>
    <string name="avatar_menu_change">Change photo</string>
    <string name="avatar_menu_delete">Delete photo</string>
    <string name="edit_profile_screen_heading">Edit Profile</string>
    <string name="security_screen_title">Security</string>
    <string name="security_screen_change_password_button">Change Password</string>
    <string name="security_screen_delete_profile_button">Delete Profile</string>
    <string name="security_screen_remember_me_toggle">Remember me</string>
    <string name="delete_profile_dialog_body">Are you sure you want to delete profile?</string>
    <string name="delete_profile_dialog_heading">Delete profile</string>
    <string name="delete_profile_dialog_positive_button">Yes, delete</string>
    <string name="recent_login_required_dialog_heading">Sign in again</string>
    <string name="recent_login_required_dialog_body">To delete you profile recent sign in is required. Please, sign in and try again.</string>
    <string name="change_password_screen_recent_login_required_dialog_body">To change the password recent sign in is required. Please, sign in and try again.</string>
    <string name="recent_login_required_dialog_positive_button">Logout</string>
    <string name="change_password_screen_change_button">Change</string>
    <string name="change_password_screen_title">Change Password</string>
    <string name="change_password_screen_new_password_placeholder">New password</string>
    <string name="change_password_screen_current_password_placeholder">Current password</string>
    <string name="change_password_screen_new_password_error">Password must be at least 6 characters.</string>
    <string name="change_password_screen_current_password_error">Wrong password.</string>
    <string name="change_password_screen_error">Something went wrong.</string>
    <string name="home_screen_cd_my_bookmarks">My bookmarks</string>
    <string name="home_screen_cd_notifications">Notifications</string>
    <string name="home_screen_greeting">Hello 👋</string>
    <string name="home_screen_greeting_with_name">Hello, %s 👋</string>
    <string name="see_all_button">See All</string>
    <string name="home_screen_recently_booked">Recently Booked</string>
    <string name="hotel_category_popular">Popular</string>
    <string name="hotel_category_recommended">Recommended</string>
    <string name="hotel_category_trending">Trending</string>
    <string name="per_night">/per night</string>
    <string name="night">/night</string>
    <string name="home_screen_loading">Hold on, we are looking for hotels</string>
    <string name="number_of_reviews">(%1$s reviews)</string>
    <string name="recently_booked_screen_title">Recently Booked</string>
    <string name="recently_booked_screen_cd_list">Display as a list</string>
    <string name="recently_booked_screen_cd_grid">Display as a grid</string>
    <string name="my_bookmark_screen_title">My Bookmark</string>
    <string name="my_bookmark_screen_remove_from_bookmark">Remove from Bookmark?</string>
    <string name="my_bookmark_screen_remove_button">Yes, Remove</string>
    <string name="search_screen_all">All (%1$s)</string>
    <string name="search_screen_category_all_hotels">All Hotels</string>
    <string name="search_screen_recent">Recent</string>
    <string name="search_screen_cd_delete_query">Delete query</string>
    <string name="search_screen_filter_country">Country</string>
    <string name="search_screen_bottom_sheet_header">Filter Hotel</string>
    <string name="search_screen_filter_sort">Sort Results</string>
    <string name="search_screen_sort_option_review_score">Review Score</string>
    <string name="search_screen_sort_option_highest_price">Highest Price</string>
    <string name="search_screen_sort_option_lowest_price">Lowest Price</string>
    <string name="search_screen_filter_facility">Facilities</string>
    <string name="search_screen_filter_facility_swimming_pool">Swimming Pool</string>
    <string name="search_screen_filter_facility_wi_fi">WiFi</string>
    <string name="search_screen_filter_facility_restaurant">Restaurant</string>
    <string name="search_screen_filter_facility_parking">Parking</string>
    <string name="search_screen_filter_facility_meeting_room">Meeting Room</string>
    <string name="search_screen_filter_facility_elevator">Elevator</string>
    <string name="search_screen_filter_facility_fitness_center">Fitness Center</string>
    <string name="search_screen_filter_facility_day_and_night_open">24-hours Open</string>
    <string name="search_screen_bottom_sheet_reset_button">Reset</string>
    <string name="search_screen_bottom_sheet_apply_button">Apply Filter</string>
    <string name="search_screen_filter_price_range">Price Range Per Night</string>
    <string name="hotel_details_screen_gallery_photos">Gallery Photos</string>
    <string name="hotel_details_screen_details">Details</string>
    <string name="hotel_details_screen_detail_type">Hotels</string>
    <string name="hotel_details_screen_detail_bedrooms">%1$s Bedrooms</string>
    <string name="hotel_details_screen_detail_bathrooms">%1$s Bathrooms</string>
    <string name="hotel_details_screen_detail_square">%1$s sq m</string>
    <string name="hotel_details_screen_description">Description</string>
    <string name="hotel_details_screen_facilities">Facilities</string>
    <string name="hotel_details_screen_review">Review</string>
    <string name="hotel_details_screen_book_button">Book Now!</string>
    <string name="review_screen_title">Review</string>
    <string name="rating_filter_all">All</string>
    <string name="rating_filter_five">5</string>
    <string name="rating_filter_four">4</string>
    <string name="rating_filter_three">3</string>
    <string name="rating_filter_two">2</string>
    <string name="hotel_reviews_screen_rating">Rating</string>
    <string name="gallery_screen_title">Gallery Hotel Photos</string>
    <string name="payment_successfull">Payment Successfull!</string>
    <string name="successfully_payment_body">Successfully made payment and hotel booking</string>
    <string name="view_ticket">View Ticket</string>
    <string name="my_booking_screen_cancel_booking_title">Cancel Booking</string>
    <string name="my_booking_screen_cancel_booking_positive_button">Yes, Continue</string>
    <string name="my_booking_screen_cancel_booking_subtitle">Are you sure you want to cancel your hotel booking?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>