<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/destination_home"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/destination_search"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/ic_document"
        android:title="@string/destination_booking"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/destination_profile" />
</menu>
