<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.project.bookmyroom.view.fragments.HomeFragment"
        android:label="@string/destination_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.project.bookmyroom.view.fragments.SearchFragment"
        android:label="@string/destination_search" />

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.project.bookmyroom.view.fragments.MyBookingFragment"
        android:label="@string/destination_booking" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.project.bookmyroom.view.fragments.ProfileFragment"
        android:label="@string/destination_profile" />

</navigation>
