<!-- activity_welcome_screen.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_welcome"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/card_opacity25_green"
        android:paddingStart="24dp"
        android:paddingTop="48dp"
        android:paddingEnd="24dp"
        android:paddingBottom="48dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen_title"
            android:textSize="24sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="80sp"
            android:textColor="@color/primary500"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/textViewSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen_subtitle"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</RelativeLayout>
